--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babylonjs": "^3.1.0-alpha2"
+    "babylonjs": "^3.1.0-alpha3.5",
+    "babylonjs-post-process": "^3.1.0-alpha3.5"
   },
   "devDependencies": {
     "browserify": "^14.4.0",
